src/test/ui/rfc-2093-infer-outlives/self-dyn.stderr
error: rustc_outlives
  --> $DIR/self-dyn.rs:9:1
   |
LL | / struct Foo<'a, 'b, A>
LL | | {
LL | |     foo: Box<dyn Trait<'a, 'b, A>>
LL | | }
   | |_^
   |
   = note: A : 'a

error: aborting due to previous error

